Bug 1244773 - Fixed ffvpx compilation on mingw. r=jya